libs/@local/hashql/ast/tests/ui/lower/expander/generics-multiple-module-segments.jsonc
//@ run: fail
//@ description: generic arguments on multiple module segments should all be reported
["::kernel<Integer>::special_form<String>::if", { "#literal": true }, { "#literal": 1 }]
//~^ ERROR generic argument not allowed here
